@@ -35,6 +35,8 @@ AC_HEADER_TIME
 AC_CHECK_HEADERS(sys/time.h sys/tty.h)
 AC_HAVE_FUNCS(vhangup)
 AC_FUNC_CHECK(grantpt,AC_DEFINE(STREAMSPTY))
+AC_HEADER_CHECK(sac.h,AC_DEFINE(HAS_SAC))
+AC_HEADER_CHECK(sys/ptyvar.h,AC_DEFINE(HAS_PTYVAR))
 AC_FUNC_CHECK(gettosbyname,AC_DEFINE(HAS_GETTOS))
 AC_HEADER_CHECK(sys/filio.h,AC_DEFINE(FILIO_H))
 AC_HEADER_CHECK(sys/stream.h,AC_DEFINE(STREAMS))
